Update: add color to yalo section, minor fixes to overflows

--- a/assets/_mixins.scss
+++ b/assets/_mixins.scss
@@ -203,8 +203,6 @@ $black: #262524;
 @mixin container{
   max-width: 1600px;
   margin: 0 auto;
-  width: 100vw;
-  overflow-x: hidden;
   @include padding-top;
   @include padding-bottom;
   @include padding-left;
